force-app/main/default/objects/Case/fields/Date_of_receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_receipt__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date of receipt</label>
    <type>Date</type>
</CustomField>