force-app/main/default/objects/Case/fields/Date_of_Total_loss__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Total_loss__c</fullName>
    <label>Date of Total loss</label>
    <type>Date</type>
</CustomField>