force-app/main/default/objects/Case/fields/Date_Time_Update_of_Comment_For_Delay__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Update_of_Comment_For_Delay__c</fullName>
    <description>Automation to populate the field &quot; Date/Time Update of Comment For Delay&quot; when the field &quot; Comment for delay&quot; is updated</description>
    <label>Date/Time Update of Comment For Delay</label>
    <type>DateTime</type>
</CustomField>