force-app/main/default/objects/Case/fields/Datetime_Confirmation_date__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Confirmation_date__c</fullName>
    <label>Confirmation date</label>
    <type>DateTime</type>
</CustomField>