force-app/main/default/objects/Case/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <description>ROMANIA ACCIDENT MANAGEMENT

Replacing Fransiza</description>
    <label>Deductible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>