force-app/main/default/objects/Case/fields/Deductible_Funded__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Funded__c</fullName>
    <label>Deductible Funded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>