force-app/main/default/objects/Case/fields/Deficiency_reason__c.field-meta.xml
<CustomField>
    <fullName>Deficiency_reason__c</fullName>
    <label>Deficiency reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>External_Case_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Process related</fullName>
            </value>
            <value>
                <fullName>IT System related</fullName>
            </value>
            <value>
                <fullName>Human error</fullName>
            </value>
            <value>
                <fullName>HR related (Human Ressources)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>