force-app/main/default/objects/Case/fields/Detail_ActionPlan__c.field-meta.xml
<CustomField>
    <fullName>Detail_ActionPlan__c</fullName>
    <inlineHelpText>Describe the actions that were or will be done in detail. If no action, insert NA</inlineHelpText>
    <label>Action Taken</label>
    <length>10240</length>
    <type>LongTextArea</type>
</CustomField>