force-app/main/default/objects/Case/fields/Detailed_Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Deficiency__c</fullName>
    <label>Deficiency Detail</label>
    <length>10240</length>
    <type>LongTextArea</type>
</CustomField>