force-app/main/default/objects/Case/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Case #133018</description>
    <label>Direction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>