force-app/main/default/objects/Case/fields/Dispute1__c.field-meta.xml
<CustomField>
    <fullName>Dispute1__c</fullName>
    <label>Dispute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Process related</fullName>
            </value>
            <value>
                <fullName>IT process related</fullName>
            </value>
            <value>
                <fullName>Human failure</fullName>
            </value>
            <value>
                <fullName>HR related</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>