force-app/main/default/objects/Case/fields/Dispute__c.field-meta.xml
<CustomField>
    <fullName>Dispute__c</fullName>
    <label>Dispute</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>External_Case_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Process related</fullName>
            </value>
            <value>
                <fullName>IT System related</fullName>
            </value>
            <value>
                <fullName>Human failure</fullName>
            </value>
            <value>
                <fullName>HR related</fullName>
            </value>
            <value>
                <fullName>Human error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>