force-app/main/default/objects/Case/fields/Dispute_Justified__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Justified__c</fullName>
    <label>Dispute Justified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>