force-app/main/default/objects/Case/fields/DM_LOADID__c.field-meta.xml
<CustomField>
    <fullName>DM_LOADID__c</fullName>
    <description>BR-6425 - Unique identifier to manage the integration data from LP SF and ALD SF</description>
    <externalId>true</externalId>
    <label>DM LOADID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>