force-app/main/default/objects/Case/fields/Do_not_send_survey__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description added to be commited in Git</description>
    <label>Do not send survey</label>
    <type>Checkbox</type>
</CustomField>