force-app/main/default/objects/Case/fields/Document_number_of_correction__c.field-meta.xml
<CustomField>
    <fullName>Document_number_of_correction__c</fullName>
    <description>Place to store document reference if required​</description>
    <label>Document number of correction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>