force-app/main/default/objects/Case/fields/Door_To_Door__c.field-meta.xml
<CustomField>
    <fullName>Door_To_Door__c</fullName>
    <label>Door To Door</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>External_Case_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>B - D2D - On demand</fullName>
            </value>
            <value>
                <fullName>B - D2D - Regular maintenance</fullName>
            </value>
            <value>
                <fullName>B - D2D - Seasonal tyre change</fullName>
            </value>
            <value>
                <fullName>B - D2D - Yearly technical inspection</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - Damage repairs</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - Maintenance and repairs</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - On demand</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - Opening of the damage file</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - Replacement vehicle delivery</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - Seasonal tyre change</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - Vehicle return at end of contract</fullName>
            </value>
            <value>
                <fullName>Ex - D2D - Yearly technical inspection</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Basic FOC</fullName>
            </value>
            <value>
                <fullName>V.I.P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>