force-app/main/default/objects/Case/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <description>Populate Driver based on the Contract details available</description>
    <formula>IF( RecordTypeId = &quot;01220000000V4TZ&quot;,  Contract__r.Driver__r.FirstName + &quot; &quot; + Contract__r.Driver__r.LastName , &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver</label>
    <type>Text</type>
</CustomField>