force-app/main/default/objects/Case/fields/EM_Addresses__c.field-meta.xml
<CustomField>
    <fullName>EM_Addresses__c</fullName>
    <description>Technical custom field to store some adresses of Incoming Email Message</description>
    <label>EM Addresses</label>
    <type>TextArea</type>
</CustomField>