force-app/main/default/objects/Case/fields/Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_From_Address__c</fullName>
    <label>Last Email sender</label>
    <type>Email</type>
</CustomField>