force-app/main/default/objects/Case/fields/Email_Sender__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Email Sender</label>
    <type>Email</type>
</CustomField>