force-app/main/default/objects/Case/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <formula>IF( New_Email__c = &quot;True&quot; , IMAGE(&quot;/resource/1528993331000/unreadMail&quot;, &quot;icon B&quot;, 20, 20) , 
      IF( New_Email__c = &quot;False&quot; , IMAGE(&quot;/resource/1528992941000/readMail&quot;, &quot;icon A&quot;, 20, 20), 
         &quot;&quot;) 
   )</formula>
    <label>Email Status</label>
    <type>Text</type>
</CustomField>