force-app/main/default/objects/Case/fields/Email_to_Case_Sender_formula__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Case_Sender_formula__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <formula>Sender__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email-to-Case Sender</label>
    <type>Text</type>
</CustomField>