force-app/main/default/objects/Case/fields/Emailtocasereceiver__c.field-meta.xml
<CustomField>
    <fullName>Emailtocasereceiver__c</fullName>
    <description>This Field is used to capture receiver email address for E2C.</description>
    <label>N/A Email-to-case receiver</label>
    <type>Email</type>
</CustomField>