force-app/main/default/objects/Case/fields/Emailtocasereceiver_FormulaField__c.field-meta.xml
<CustomField>
    <fullName>Emailtocasereceiver_FormulaField__c</fullName>
    <formula>Emailtocasereceiver__c</formula>
    <label>Email-to-case receiver</label>
    <type>Text</type>
</CustomField>