force-app/main/default/objects/Case/fields/Engine_size_cm3__c.field-meta.xml
<CustomField>
    <fullName>Engine_size_cm3__c</fullName>
    <label>Engine size (cm3)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>