force-app/main/default/objects/Case/fields/Entrance_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Confirmation__c</fullName>
    <label>Entrance Confirmation</label>
    <type>Date</type>
</CustomField>