force-app/main/default/objects/Case/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Operational_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sensitive</fullName>
            </value>
            <value>
                <fullName>Internal fraud</fullName>
            </value>
            <value>
                <fullName>Ombudsman Involved</fullName>
            </value>
            <value>
                <fullName>Recurring commercial issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>