force-app/main/default/objects/Case/fields/Estimated_Financial_impact__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Financial_impact__c</fullName>
    <label>Estimated Financial impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>