force-app/main/default/objects/Case/fields/Estimated_Workload__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Workload__c</fullName>
    <description>The workload estimate</description>
    <label>Estimated Workload</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0h - 2h</fullName>
            </value>
            <value>
                <fullName>2h - 4h</fullName>
            </value>
            <value>
                <fullName>4h - 8h</fullName>
            </value>
            <value>
                <fullName>8h - 16h</fullName>
            </value>
            <value>
                <fullName>&gt;16h</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>