force-app/main/default/objects/Case/fields/Event_description__c.field-meta.xml
<CustomField>
    <fullName>Event_description__c</fullName>
    <description>ACCIDENT MANAGEMENT</description>
    <label>Event Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>