force-app/main/default/objects/Case/fields/ExceptionNumber_FormulaField__c.field-meta.xml
<CustomField>
    <fullName>ExceptionNumber_FormulaField__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  ExceptionNumberLookup__r.Id ,    ExceptionNumberLookup__r.Name)</formula>
    <label>Exception Number</label>
    <type>Text</type>
</CustomField>