force-app/main/default/objects/Case/fields/ExceptionNumberLookup__c.field-meta.xml
<CustomField>
    <fullName>ExceptionNumberLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture the Exception number and store the same in Case. - Its an Lookup Field.</description>
    <label>Exception Number</label>
    <referenceTo>Mail_Exception__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>