force-app/main/default/objects/Case/fields/Expected_Repair_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Repair_End_Date__c</fullName>
    <description>Created as part of the BR-6053</description>
    <label>Expected Repair End Date</label>
    <type>Date</type>
</CustomField>