force-app/main/default/objects/Case/fields/Expected_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return_Date__c</fullName>
    <description>Q1/2020: OK to be deleted from Poland - but just removed from PL. Deletion to be done when all the apex classes will be reviewed</description>
    <label>Expected Return Date</label>
    <type>DateTime</type>
</CustomField>