force-app/main/default/objects/Case/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>Contract__r.EndDate</formula>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>