force-app/main/default/objects/Case/fields/Ext_Color__c.field-meta.xml
<CustomField>
    <fullName>Ext_Color__c</fullName>
    <label>Ext Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>