force-app/main/default/objects/Case/fields/Extension_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extension_Cost__c</fullName>
    <label>Extension Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebill Rate</fullName>
            </value>
            <value>
                <fullName>Contracted Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>