force-app/main/default/objects/Case/fields/External_Case_Category__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accident Management</fullName>
                <color>#0B6FCE</color>
                <label>Accident Management</label>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Administration management</fullName>
            </value>
            <value>
                <fullName>Administration request</fullName>
                <color>#0B6FCE</color>
                <label>Administration request</label>
            </value>
            <value>
                <fullName>Administrative</fullName>
                <color>#78C953</color>
                <label>Administrative</label>
            </value>
            <value>
                <fullName>Administrative requests</fullName>
                <color>#E27001</color>
                <label>Administrative requests</label>
            </value>
            <value>
                <fullName>Aldavar Vehicle Upload</fullName>
            </value>
            <value>
                <fullName>ALD Flex</fullName>
            </value>
            <value>
                <fullName>ALD Net</fullName>
            </value>
            <value>
                <fullName>Alert fraud</fullName>
                <color>#A845DC</color>
                <label>Alert fraud</label>
            </value>
            <value>
                <fullName>Assignment service</fullName>
                <color>#F3D904</color>
                <label>Assignment service</label>
            </value>
            <value>
                <fullName>Assistance</fullName>
                <color>#A53711</color>
                <label>Assistance</label>
            </value>
            <value>
                <fullName>Assistance support</fullName>
                <color>#641CCF</color>
                <label>Assistance support</label>
            </value>
            <value>
                <fullName>Authorisations</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
                <color>#66E9BD</color>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
                <color>#0B24BE</color>
                <label>Call Center</label>
            </value>
            <value>
                <fullName>Call center_</fullName>
                <color>#419249</color>
                <label>Call center_</label>
            </value>
            <value>
                <fullName>Car Administration</fullName>
            </value>
            <value>
                <fullName>Choose Mobility</fullName>
            </value>
            <value>
                <fullName>Choose Vehicle</fullName>
            </value>
            <value>
                <fullName>Client Management</fullName>
            </value>
            <value>
                <fullName>Commercial dispute Lilly</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Contract administration</fullName>
            </value>
            <value>
                <fullName>Contract closure</fullName>
            </value>
            <value>
                <fullName>Contract closure and remarketing</fullName>
            </value>
            <value>
                <fullName>Contract correction</fullName>
            </value>
            <value>
                <fullName>Contract Management</fullName>
            </value>
            <value>
                <fullName>Contract modification</fullName>
                <color>#B6E32E</color>
                <label>Contract modification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>