force-app/main/default/objects/Case/fields/External_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Detail__c</fullName>
    <label>Case Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>External_Case_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>ACCESSORY QUOTE</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Accident claim</fullName>
            </value>
            <value>
                <fullName>Accident impound</fullName>
            </value>
            <value>
                <fullName>Accident management</fullName>
            </value>
            <value>
                <fullName>Accident management procedure</fullName>
            </value>
            <value>
                <fullName>Account statement</fullName>
                <label>Account Statement</label>
            </value>
            <value>
                <fullName>Accreditation</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Add/remove FLT</fullName>
            </value>
            <value>
                <fullName>Add accessories</fullName>
            </value>
            <value>
                <fullName>Add and remove services</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Additional accessories</fullName>
            </value>
            <value>
                <fullName>Additional data</fullName>
            </value>
            <value>
                <fullName>Additional services</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Address change</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATIVE CANCELLATION</fullName>
            </value>
            <value>
                <fullName>Administrative impound</fullName>
            </value>
            <value>
                <fullName>Advance restitution</fullName>
            </value>
            <value>
                <fullName>AEN EXPLANATION</fullName>
            </value>
            <value>
                <fullName>Agreement Request</fullName>
            </value>
            <value>
                <fullName>ALD demat</fullName>
            </value>
            <value>
                <fullName>ALD electric</fullName>
            </value>
            <value>
                <fullName>ALD Employees</fullName>
            </value>
            <value>
                <fullName>ALD Express</fullName>
            </value>
            <value>
                <fullName>ALD Net</fullName>
            </value>
            <value>
                <fullName>ALD Net request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>