force-app/main/default/objects/Case/fields/External_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIDE AU CHOIX LIEU INTERVENTION</fullName>
            </value>
            <value>
                <fullName>AJOUT / RETRAIT PRESTA</fullName>
            </value>
            <value>
                <fullName>AJOUT EN URGENCE</fullName>
            </value>
            <value>
                <fullName>ALDCAR</fullName>
            </value>
            <value>
                <fullName>ALDNET</fullName>
            </value>
            <value>
                <fullName>ANALYSE DE CONSOMMATION POUR 1 CARTE</fullName>
            </value>
            <value>
                <fullName>ANALYSE DE CONSOMMATION POUR 1 PARC</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>ANNULATION</fullName>
            </value>
            <value>
                <fullName>AO CLIENT</fullName>
            </value>
            <value>
                <fullName>ATTENTE D&apos;UN AVOIR OU GESTE COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>AUTRE</fullName>
            </value>
            <value>
                <fullName>AVANTAGES EN NATURE</fullName>
            </value>
            <value>
                <fullName>BELTOISE PREVENTION</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Cancelation</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>CARBURANT</fullName>
            </value>
            <value>
                <fullName>CARTE GRISE</fullName>
            </value>
            <value>
                <fullName>CARTE VERTE</fullName>
            </value>
            <value>
                <fullName>CATALOGUE OU GRILLE</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>COMMANDE</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>CONDUCTEURS</fullName>
            </value>
            <value>
                <fullName>COORDONNEES</fullName>
            </value>
            <value>
                <fullName>DEMANDE DE DELAI</fullName>
            </value>
            <value>
                <fullName>DEMANDE DE RDV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>