force-app/main/default/objects/Case/fields/External_description__c.field-meta.xml
<CustomField>
    <fullName>External_description__c</fullName>
    <description>PLC 15/12/08 : Italy- v2</description>
    <label>Case Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>External_Case_Detail__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0800 Claims</fullName>
            </value>
            <value>
                <fullName>6 months period delivery</fullName>
            </value>
            <value>
                <fullName>Accessori documenti non forniti</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Accessories cost</fullName>
            </value>
            <value>
                <fullName>Accessorio after market</fullName>
            </value>
            <value>
                <fullName>ACCIDENT</fullName>
            </value>
            <value>
                <fullName>Accident management</fullName>
            </value>
            <value>
                <fullName>Accident report</fullName>
            </value>
            <value>
                <fullName>ACI refund</fullName>
            </value>
            <value>
                <fullName>Activation direct debit</fullName>
            </value>
            <value>
                <fullName>Active accident</fullName>
            </value>
            <value>
                <fullName>Add. Equipment</fullName>
            </value>
            <value>
                <fullName>Addebiti da errori quotazioni</fullName>
            </value>
            <value>
                <fullName>Addebiti extra per uso sostitutiva</fullName>
            </value>
            <value>
                <fullName>Addebiti extra per uso temporaneo</fullName>
            </value>
            <value>
                <fullName>Addebito giorni eccedenti</fullName>
            </value>
            <value>
                <fullName>Addebito mora</fullName>
            </value>
            <value>
                <fullName>Addebito relief fuori ctr</fullName>
            </value>
            <value>
                <fullName>Addebito riparazione</fullName>
            </value>
            <value>
                <fullName>Adding cost</fullName>
            </value>
            <value>
                <fullName>Adding installation</fullName>
            </value>
            <value>
                <fullName>Ad Hoc Rental</fullName>
            </value>
            <value>
                <fullName>Adjustment Of Fuel Card Invoices</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Administrative cost</fullName>
            </value>
            <value>
                <fullName>Administrative expenses</fullName>
            </value>
            <value>
                <fullName>Administratives reasons</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Aggancio RID non avvenuto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>