force-app/main/default/objects/Case/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId (Case BOI)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>